# coding-agent-pypi

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  streamlit_app.py  tests.py
coding_agent/: cli.py  config.py
coding_agent/functions/: call_function.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
docs/: index.md
search/: search_index.json
